# auto_yolo

./: .gitignore  AutoResearch_YOLO_完整指南.md  README.md  README_CN.md  YOLO_SubspaceAD_实现计划.md
SubspaceAD/: README.md  main.py  pyproject.toml  requirements.txt  run_bottle_debug.sh  run_full_benchmark.sh  style.css
SubspaceAD/scripts/: aggregation_ablation.sh  backbone_ablation.sh  benchmark_batched0shot.sh  benchmark_few_shot.sh  benchmark_full_shot.sh  ev_ablation.sh  resolution_ablation.sh
SubspaceAD/src/subspacead/: config.py
SubspaceAD/src/subspacead/core/: extractor.py  patching.py  pca.py
SubspaceAD/src/subspacead/data/: datasets.py  transforms.py
SubspaceAD/src/subspacead/post_process/: scoring.py  specular.py
SubspaceAD/src/subspacead/utils/: common.py  viz.py
SubspaceAD/tools/: prepare_visa.py
autoresearch/docs/plans/: 2026-04-13-yolo-autoresearch-v2-design.md  2026-04-13-yolo-autoresearch-v2-implementation-plan.md
docs/plans/: 2026-04-14-yolo-subspacead-design.md
yolo-autoresearch-v2/: README.md  README_CN.md  inference.py  monitor_dashboard.py  neu-det.yaml  prepare_dataset.py  program.md  results.tsv  train.py
yolo-autoresearch-v2/NEU-DET/: annotations
yolo-autoresearch-v2/data/train/: labels.cache
yolo-autoresearch-v2/data/val/: labels.cache
yolo-autoresearch-v2/models/: subspace_pca.pkl
yolo-autoresearch-v2/runs/detect/runs/baseline/yolov8n_baseline/: args.yaml
yolo-autoresearch-v2/src/: assigner.py  losses.py  search_space.py
yolo-autoresearch-v2/tests/: test_assigner.py  test_losses.py
